@@ -9,7 +9,9 @@ import jakarta.ws.rs.ServerErrorException;
 import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.client.WebTarget;
 import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import net.ripe.db.whois.api.RestTest;
+import net.ripe.db.whois.api.rdap.RdapConformance;
 import net.ripe.db.whois.api.rdap.domain.Action;
 import net.ripe.db.whois.api.rdap.domain.Domain;
 import net.ripe.db.whois.api.rdap.domain.Entity;
@@ -41,6 +43,7 @@ import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -52,7 +55,8 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -240,7 +244,7 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(Domain.class);
 
-        assertCommon(domain);
+        assertDomain(domain);
         assertThat(domain.getHandle(), equalTo("31.12.202.in-addr.arpa"));
         assertThat(domain.getLdhName(), equalTo("31.12.202.in-addr.arpa."));
         assertThat(domain.getObjectClassName(), is("domain"));
@@ -286,10 +290,11 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
         assertTnCNotice(notices.get(2), "https://rdap.db.ripe.net/domain/31.12.202.in-addr.arpa");
 
          final List<Link> links= domain.getLinks();
-        assertThat(links, hasSize(1));
+        assertThat(links, hasSize(7));
+        assertRelationLinks(links);
 
-        assertThat(links.get(0).getRel(), is("copyright"));
-        assertThat(links.get(0).getHref(), is("http://www.ripe.net/data-tools/support/documentation/terms"));
+        assertThat(links.getLast().getRel(), is("copyright"));
+        assertThat(links.getLast().getHref(), is("http://www.ripe.net/data-tools/support/documentation/terms"));
     }
 
     @Test
@@ -298,7 +303,7 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(Domain.class);
 
-        assertCommon(domain);
+        assertDomain(domain);
         assertThat(domain.getHandle(), equalTo("31.12.202.in-addr.arpa"));
         assertThat(domain.getLdhName(), equalTo("31.12.202.in-addr.arpa."));
         assertThat(domain.getObjectClassName(), is("domain"));
@@ -340,7 +345,25 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getDomainSearchResults(), is(nullValue()));
+        assertDomain(searchResult);
+        assertThat(searchResult.getDomainSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getDomainSearchResults().size(), is(0));
+    }
+
+    @Test
+    public void search_domain_then_all_empty_lists() {
+        rebuildIndex();
+        final Response searchResult = createResource("domains?name=ripe.net")
+                .request(MediaType.APPLICATION_JSON_TYPE)
+                .get(Response.class);
+
+        final String searchJsonResult = searchResult.readEntity(String.class);
+        assertThat(searchJsonResult, containsString("""
+                \
+                  "domainSearchResults" : [ ]"""));
+        assertThat(searchJsonResult, not(containsString("""
+                \
+                  "entitySearchResults" : [ ]""")));
     }
 
     @Test
@@ -350,6 +373,22 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .get(SearchResult.class);
 
         assertThat(response.getDomainSearchResults().get(0).getHandle(), equalTo("31.12.202.in-addr.arpa"));
+    }
+
+    @Test
+    public void search_domain_exact_match_exact_json() {
+        final Response response = createResource("domains?name=31.12.202.in-addr.arpa")
+                .request(MediaType.APPLICATION_JSON_TYPE)
+                .get(Response.class);
+
+        final String searchJsonResult = response.readEntity(String.class);
+        assertThat(searchJsonResult, containsString("""
+                  "domainSearchResults" : [ {
+                    "handle" : "31.12.202.in-addr.arpa",
+                """));
+        assertThat(searchJsonResult, not(containsString("""
+                  "entitySearchResults" : [ ]
+                  """)));
     }
 
     @Test
@@ -408,7 +447,9 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getEntitySearchResults(), is(nullValue()));
+
+        assertThat(searchResult.getEntitySearchResults(), is(notNullValue()));
+        assertThat(searchResult.getEntitySearchResults().size(), is(0));
     }
 
     @Test
@@ -439,7 +480,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getEntitySearchResults(), is(nullValue()));
+        assertThat(searchResult.getEntitySearchResults(), is(notNullValue()));
+        assertThat(searchResult.getEntitySearchResults().size(), is(0));
     }
 
     @Test
@@ -464,7 +506,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getEntitySearchResults(), is(nullValue()));
+        assertThat(searchResult.getEntitySearchResults(), is(notNullValue()));
+        assertThat(searchResult.getEntitySearchResults().size(), is(0));
     }
 
     @Test
@@ -474,7 +517,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getEntitySearchResults(), is(nullValue()));
+        assertThat(searchResult.getEntitySearchResults(), is(notNullValue()));
+        assertThat(searchResult.getEntitySearchResults().size(), is(0));
     }
 
     @Test
@@ -504,7 +548,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getEntitySearchResults(), is(nullValue()));
+        assertThat(searchResult.getEntitySearchResults(), is(notNullValue()));
+        assertThat(searchResult.getEntitySearchResults().size(), is(0));
     }
 
     // search - entities - role
@@ -538,7 +583,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(response.getEntitySearchResults().get(0).getHandle(), equalTo("ORG-TEST1-TEST"));
+        assertThat(response.getEntitySearchResults().getFirst().getHandle(), equalTo("ORG-TEST1-TEST"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -816,6 +862,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
 
         assertThat(response.getIpSearchResults().size(), is(1));
         assertThat(response.getIpSearchResults().getFirst().getHandle(), equalTo("0.0.0.0 - 255.255.255.255"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("rirSearch1", "ips", "ipSearchResults",
+                "cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -974,7 +1022,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getIpSearchResults(), is(nullValue()));
+        assertThat(searchResult.getIpSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getIpSearchResults().size(), is(0));
     }
 
     @Test
@@ -984,7 +1033,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getIpSearchResults(), is(nullValue()));
+        assertThat(searchResult.getIpSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getIpSearchResults().size(), is(0));
     }
 
     @Test
@@ -993,7 +1043,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                     .request(MediaType.APPLICATION_JSON_TYPE)
                     .get(SearchResult.class);
 
-        assertThat(searchResult.getIpSearchResults(), is(nullValue()));
+        assertThat(searchResult.getIpSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getIpSearchResults().size(), is(0));
     }
 
     @Test
@@ -1019,7 +1070,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(response.getIpSearchResults(), is(nullValue()));
+        assertThat(response.getIpSearchResults(), is(notNullValue()));
+        assertThat(response.getIpSearchResults().size(), is(0));
     }
 
 
@@ -1034,6 +1086,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
 
         assertThat(response.getAutnumSearchResults().size(), is(1));
         assertThat(response.getAutnumSearchResults().getFirst().getName(), equalTo("AS-TEST"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("rirSearch1", "autnums", "autnumSearchResults",
+                "cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -1089,7 +1143,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getAutnumSearchResults(), is(nullValue()));
+        assertThat(searchResult.getAutnumSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getAutnumSearchResults().size(), is(0));
     }
 
 
@@ -1100,7 +1155,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(searchResult.getAutnumSearchResults(), is(nullValue()));
+        assertThat(searchResult.getAutnumSearchResults(), is(notNullValue()));
+        assertThat(searchResult.getAutnumSearchResults().size(), is(0));
     }
 
     // Test redactions
@@ -1119,10 +1175,30 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .map(Redaction::getPrePath)
                 .collect(Collectors.toList()), containsInAnyOrder("$.entities[?(@.handle=='PP1-TEST')].vcardArray[1][?(@[0]=='e-mail')]"));
 
-        assertThat(result.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
+        assertThat(result.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0",
+                "nro_rdap_profile_0",
+                "redacted"));
     }
 
+    // Relation links
+    @Test
+    public void search_domain_then_domain_relations(){
+        final SearchResult response = createResource("domains?name=31.12.202.in-addr.arpa")
+                .request(MediaType.APPLICATION_JSON_TYPE)
+                .get(SearchResult.class);
+
+        assertThat(response.getDomainSearchResults().getFirst().getHandle(), equalTo("31.12.202.in-addr.arpa"));
+        final Map<String, String> relationLinks = getRelationCallsFromLinks(response.getDomainSearchResults().getFirst().getLinks());
+        assertThat(relationLinks.size(), is(6));
+    }
+
+
     // helper methods
+
+    private void assertRelationLinks(final List<Link> links){
+        final Map<String, String> relationCalls = getRelationCallsFromLinks(links);
+        assertThat(relationCalls.size(), is(6));
+    }
 
     protected WebTarget createResource(final String path) {
         return RestTest.target(getPort(), String.format("rdap/%s", path));
@@ -1159,6 +1235,15 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
     protected void assertErrorDescriptionContains(final WebApplicationException exception, final String description) {
         final Entity entity = exception.getResponse().readEntity(Entity.class);
         assertThat(entity.getDescription().get(0), containsString(description));
+    }
+
+    private void assertDomain(RdapObject object) {
+        assertThat(object.getPort43(), is("whois.ripe.net"));
+        assertThat(object.getRdapConformance(), hasSize(5));
+        assertThat(object.getRdapConformance(), containsInAnyOrder(RdapConformance.RIR_SEARCH_1.getValue(),
+                RdapConformance.LEVEL_0.getValue(),
+                RdapConformance.CIDR_0.getValue(),
+                RdapConformance.NRO_PROFILE_0.getValue(), RdapConformance.REDACTED.getValue()));
     }
 
     private void assertCommon(RdapObject object) {
